--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -21,17 +21,17 @@ services:
       - host.docker.internal:host-gateway
     tty: true
 
-  pwa:
-    build:
-      context: ./pwa
-      target: dev
-    volumes:
-      - ./pwa:/srv/app
-    environment:
-      API_PLATFORM_CREATE_CLIENT_ENTRYPOINT: http://php
-      API_PLATFORM_CREATE_CLIENT_OUTPUT: .
-      # On Linux, you may want to comment the following line for improved performance
-      WATCHPACK_POLLING: "true"
+  # pwa:
+  #   build:
+  #     context: ./pwa
+  #     target: dev
+  #   volumes:
+  #     - ./pwa:/srv/app
+  #   environment:
+  #     API_PLATFORM_CREATE_CLIENT_ENTRYPOINT: http://php
+  #     API_PLATFORM_CREATE_CLIENT_OUTPUT: .
+  #     # On Linux, you may want to comment the following line for improved performance
+  #     WATCHPACK_POLLING: "true"
 
 ###> doctrine/doctrine-bundle ###
   database:
