--- a/compose.yaml
+++ b/compose.yaml
@@ -5,7 +5,7 @@ services:
       - database
     restart: unless-stopped
     environment:
-      PWA_UPSTREAM: pwa:3000
+      # PWA_UPSTREAM: pwa:3000
       SERVER_NAME: ${SERVER_NAME:-localhost}, php:80
       MERCURE_PUBLISHER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
       MERCURE_SUBSCRIBER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
@@ -32,10 +32,10 @@ services:
         published: ${HTTP3_PORT:-443}
         protocol: udp
 
-  pwa:
-    image: ${IMAGES_PREFIX:-}app-pwa
-    environment:
-      NEXT_PUBLIC_ENTRYPOINT: http://php
+  # pwa:
+  #   image: ${IMAGES_PREFIX:-}app-pwa
+  #   environment:
+  #     NEXT_PUBLIC_ENTRYPOINT: http://php
 
 ###> doctrine/doctrine-bundle ###
   database:
