--- a/helm/skaffold.yaml
+++ b/helm/skaffold.yaml
@@ -8,10 +8,10 @@ build:
       context: ../api
       docker:
         target: app_php
-    - image: api-platform-pwa
-      context: ../pwa
-      docker:
-        target: prod
+    # - image: api-platform-pwa
+    #   context: ../pwa
+    #   docker:
+    #     target: prod
 
 deploy:
   kubeContext: minikube
@@ -23,7 +23,7 @@ deploy:
       setValueTemplates:
         php.image.repository: "{{.IMAGE_REPO_api_platform_php}}"
         php.image.tag: "{{.IMAGE_TAG_api_platform_php}}@{{.IMAGE_DIGEST_api_platform_php}}"
-        pwa.image.repository: "{{.IMAGE_REPO_api_platform_pwa}}"
-        pwa.image.tag: "{{.IMAGE_TAG_api_platform_pwa}}@{{.IMAGE_DIGEST_api_platform_pwa}}"
+        # pwa.image.repository: "{{.IMAGE_REPO_api_platform_pwa}}"
+        # pwa.image.tag: "{{.IMAGE_TAG_api_platform_pwa}}@{{.IMAGE_DIGEST_api_platform_pwa}}"
       valuesFiles:
         - skaffold-values.yaml
